--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>LensLegend</title>
+		<title>LensletArrayLegend</title>
 		<!-- <link rel="icon" type="image/x-icon" href="./favicon.png"> -->
 		<style>
     	    body {
