Button-size change

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>LensletArrayLegend</title>
+		<title>LensletLegend</title>
 		<!-- <link rel="icon" type="image/x-icon" href="./favicon.png"> -->
 		<style>
     	    body {
@@ -22,7 +22,7 @@
 			    bottom: 30px;
     			left: 50%;
     			transform: translateX(-50%); /* see https://stackoverflow.com/questions/19461521/how-to-center-an-element-horizontally-and-vertically */
-				width: 170px; /* Set the width of the image */
+				width: 80px; /* Set the width of the image */
     	        cursor: pointer;
 	            z-index: 2; /* Ensure image is above the canvas */
   	      	}
