Now using both device cameras (if available)

--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
 		</script>
 	</head>
 	<body>
-		<video id="videoFeed" style="display:none" autoplay playsinline></video>
+		<video id="videoFeedU" style="display:none" autoplay playsinline></video>
+		<video id="videoFeedE" style="display:none" autoplay playsinline></video>
 		<img id="backButton" src="./backButton.png" alt="Back to live view">
 		<img id="shareButton" src="./shareButton.png" alt="Share photo...">
 		<img id="deleteButton" src="./deleteButton.png" alt="Delete stored photo">
