--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>LensletLegend</title>
-		<!-- <link rel="icon" type="image/x-icon" href="./favicon.png"> -->
+		<link rel="icon" type="image/x-icon" href="./favicon.png">
 		<style>
     	    body {
         	    margin: 0;
